-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
Qt Creator 3.0.0-rc1
-
OpenSUSE 13.1 64 bit, Noveau/Galium 0.4 on NVD9
Qt Creator crashes reproducably for me when switching between tabs in the QML Profiler (and actually take the whole window manager with it).
dmesg log:
[ 480.540370] perf samples too long (2640 > 2500), lowering kernel.perf_event_max_sample_rate to 50000 [ 1988.824062] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [(unknown enum 0x00000051)] ch 4 [0x003fabe000 qtcreator[23226]] subc 2 class 0x9039 mthd 0x0300 data 0x00100010 [ 2008.048445] show_signal_msg: 54 callbacks suppressed [ 2008.048452] QSGRenderThread[23265]: segfault at 8 ip 00007f061fdfc64a sp 00007f05b6ffdab0 error 4 in libdrm_nouveau.so.2.0.0[7f061fdf9000+6000] [ 2275.697510] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [(unknown enum 0x00000051)] ch 4 [0x003fabe000 qtcreator[24920]] subc 2 class 0x9039 mthd 0x0300 data 0x00100010 [ 2568.885718] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [(unknown enum 0x00000051)] ch 4 [0x003fabe000 qtcreator[27299]] subc 2 class 0x9039 mthd 0x0300 data 0x00100010 [ 2575.097841] nouveau E[qtcreator[27299]] multiple instances of buffer 29 on validation list [ 2575.097846] nouveau E[qtcreator[27299]] validate_init [ 2575.097847] nouveau E[qtcreator[27299]] validate: -22 [ 2575.100406] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: (unknown bits 0x00040000) [ 2575.100410] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: ch 4 [qtcreator[27299]] subc 0 mthd 0x0000 data 0x00000000 [ 2575.100424] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: (unknown bits 0x00040000) [ 2575.100426] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: ch 4 [qtcreator[27299]] subc 0 mthd 0x0000 data 0x00000000 [ 2575.100437] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: (unknown bits 0x00040000) [ 2575.100439] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: ch 4 [qtcreator[27299]] subc 0 mthd 0x0000 data 0x00000000 [ 2575.100452] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: (unknown bits 0x00040000) [ 2575.100454] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: ch 4 [qtcreator[27299]] subc 0 mthd 0x0000 data 0x00000000 [ 2627.008146] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [(unknown enum 0x00000051)] ch 4 [0x003fabe000 qtcreator[27346]] subc 2 class 0x9039 mthd 0x0300 data 0x00100010 [ 2680.423123] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [(unknown enum 0x00000051)] ch 4 [0x003fabe000 qtcreator[29152]] subc 2 class 0x9039 mthd 0x0300 data 0x00100010 [ 2699.786104] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [(unknown enum 0x00000051)] ch 4 [0x003fabe000 qtcreator[29221]] subc 2 class 0x9039 mthd 0x0300 data 0x00100010 [ 2708.549504] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: (unknown bits 0x00040000) [ 2708.549513] nouveau E[ PFIFO][0000:03:00.0] SUBFIFO0: ch 4 [qtcreator[29221]] subc 0 mthd 0x001c data 0x00000002 [ 2708.549921] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_BITFIELD] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x0880 data 0x200203fd [ 2708.549951] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_BITFIELD] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x0884 data 0x049c0000 [ 2708.549977] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_BITFIELD] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x0888 data 0x01140000 [ 2708.550006] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_BITFIELD] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x088c data 0x20090200 [ 2708.550037] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x0890 data 0x00000000 [ 2708.550064] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x0894 data 0x02520000 [ 2708.550093] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x0898 data 0x0000049c [ 2708.550120] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x089c data 0x00000114 [ 2708.550143] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08a0 data 0x000000e6 [ 2708.550166] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08a4 data 0x00000040 [ 2708.550189] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08a8 data 0x00000001 [ 2708.550212] nouveau E[ PGRAPH][0000:03:00.0] ILLEGAL_MTHD ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08ac data 0x00000000 [ 2708.550233] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_VALUE] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08b4 data 0x200503f8 [ 2708.550257] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_VALUE] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08bc data 0x026e0000 [ 2708.550281] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_VALUE] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08cc data 0x2001054e [ 2708.550305] nouveau E[ PGRAPH][0000:03:00.0] DATA_ERROR [INVALID_VALUE] ch 4 [0x003fabe000 qtcreator[29221]] subc 3 class 0x902d mthd 0x08d4 data 0x2003048a [ 2708.550333] nouveau E[ PGRAPH][0000:03:00.0] CTXCTL 0x00000400 [ 2708.550340] nouveau E[ PGRAPH][0000:03:00.0] 409000 - done 0x00000300 [ 2708.550351] nouveau E[ PGRAPH][0000:03:00.0] 409000 - stat 0x80000000 0x00011c00 0x00000000 0x00000000 [ 2708.550363] nouveau E[ PGRAPH][0000:03:00.0] 409000 - stat 0x00000000 0x00000000 0x00000006 0x00000000 [ 2708.550368] nouveau E[ PGRAPH][0000:03:00.0] 502000 - done 0x00000300 [ 2708.550374] nouveau E[ PGRAPH][0000:03:00.0] 502000 - stat 0x80000000 0x00005f00 0x00000000 0x00000000 [ 2708.550381] nouveau E[ PGRAPH][0000:03:00.0] 502000 - stat 0x00000000 0x00000000 0x00000002 0x00000000 [ 2712.849001] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2717.147525] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2721.446051] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2725.744584] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2730.043109] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2734.341623] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2738.589561] QSGRenderThread[29259]: segfault at 8 ip 00007fd7f8d7c64a sp 00007fd790db4060 error 4 in libdrm_nouveau.so.2.0.0[7fd7f8d79000+6000] [ 2738.640134] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2742.938647] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2747.237155] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2751.535614] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2754.066866] nouveau E[qtcreator[29221]] failed to idle channel 0xcccc0000 [qtcreator[29221]] [ 2755.834071] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2760.132529] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2764.430988] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a [ 2768.729447] nouveau W[ PFIFO][0000:03:00.0] INTR 0x00000100: 0x0000000a k
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-10875 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71986,2 | Enforce window rendering in sequence for all noveau drivers | release | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
72045,1 | Disable threaded GL for nouveau drivers. | release | qt/qtbase | Status: MERGED | +2 | 0 |