Disable threaded GL for nouveau drivers.

Task-number: QTCREATORBUG-10875
Change-Id: I25f3abc6ef15bba78fa9ec27de2c1e5e0bcc7fae
Reviewed-by: Lars Knoll <lars.knoll@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>

cregit: 7879fbe4b8e6396fff199476494c1e05fb4c16e9 https://github.com/qt/qtbase/commit/7879fbe4b8e6396fff199476494c1e05fb4c16e9