src/plugins/platforms/xcb/qglxintegration.cpp
@@ -23,4 +23,5 @@ DECL|macro|GL_CONTEXT_FLAG_DEBUG_BIT
 DECL|member|m_queriedDummyContext
 DECL|member|m_supportsThreading
 DECL|typedef|glXCreateContextAttribsARBProc
-DECL|variable|qglx_threadedgl_blacklist
+DECL|variable|qglx_threadedgl_blacklist_renderer
+DECL|variable|qglx_threadedgl_blacklist_vendor
